@@ -51,6 +51,9 @@
 	non-breaking space to have the same width as a regular
 	space.
 
+	<LI>PRE text didn't adjust the line height for the tallest
+	fragment in the line.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.18</H2>
